# Sumzle

./: LICENSE  README.md  Sumzle.html  SumzleAK.html  index.html  package.json
.github/workflows/: build.yml
src-tauri/: tauri.conf.json
wasm/: Cargo.toml  README.md  build.sh  sumzleAK_wasm.html
wasm/src/: lib.rs
